--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
-:root{
+:root {
     --main-light-brown: #F0E5CF;
     --main-cream-color: #F7F6F2;
     --main-light-blue: #C8C6C6;
     --main-blue-color: #4B6587;
     --main-dark-blue: #2b3a4e;
 }
-*{
+
+* {
     font-family: 'Patua One', 'Open sans ';
 }
-body{
+
+body {
     background-color: var(--main-blue-color);
 }
+
 .portada {
     text-align: center;
     padding: 0;
@@ -20,41 +23,50 @@ body{
     background-position: center;
     height: 660px;
 }
-.carousel-item img{
+
+.carousel-item img {
     height: 95%;
     margin: 10px 0;
     border-radius: 100%;
 }
-i img{
+
+i img {
     height: 40px;
     margin: 0 15px;
 }
-.navbar-brand{
+
+.navbar-brand {
     display: flex;
 }
-nav{
+
+nav {
     border-radius: 10px;
     margin: 10px 3px;
 }
-h2{
+
+h2 {
     margin: 40px;
     font-size: 2em;
     text-align: center;
     color: var(--main-cream-color);
 }
-h1{
+
+h1 {
     margin: auto;
 }
-.navbar button{
+
+.navbar button {
     margin: 0 5px;
     border-radius: 10px;
 }
-.aside h3{
+
+.aside h3 {
     text-align: center;
     color: var(--main-blue-color);
     margin: 30px 10px;
 }
-.aside-ads{
+
+.aside-ads {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -62,26 +74,31 @@ h1{
     margin: 0;
     padding: 0;
 }
-.aside-ads img{
+
+.aside-ads img {
     width: 105px;
     border-radius: 5px;
     max-height: 100px;
 }
-.aside-ads li{
+
+.aside-ads li {
     list-style: none;
     margin: 10px 5px;
 }
-.aside{
+
+.aside {
     margin: 30px 15px;
     border-top: var(--main-light-blue) solid 1px;
     background-color: var(--main-light-blue);
     border-radius: 10px;
 }
-.footer{
+
+.footer {
     border-top: 1px solid var(--main-light-blue);
     margin: 10px;
     opacity: 50%;
 }
+
 .copy {
     text-align: center;
     color: var(--main-light-blue);
@@ -90,8 +107,101 @@ h1{
     margin-top: 20px;
 }
 
+/* --- Products --- */
+.main-products h2 {
+    margin-top: 100px;
+}
+
+.products img {
+    max-width: 95%;
+    margin: 5px;
+}
+
+.products li {
+    list-style: none;
+    background-color: white;
+    margin: 20px 25px;
+    border-radius: 10px;
+}
+
+.products ul {
+    padding: 0;
+}
+
+li p {
+    text-align: center;
+    color: var(--main-dark-blue);
+}
+
+.product-item a {
+    text-decoration: none;
+    color: var(--main-dark-blue);
+}
+
+/* --- item page --- */
+
+.item-photo {
+    width: 95%;
+    margin-top: 100px;
+}
+
+.item-menu {
+    margin: auto;
+    padding: 0;
+    text-align: center;
+}
+
+.item-features {
+    padding: 0;
+}
+
+.item-features li {
+    list-style: none;
+    color: var(--main-cream-color);
+    margin: 25px 10px;
+}
+
+.item-menu h2 {
+    color: var(--main-cream-color);
+    font-size: 1.5em;
+    margin: 30px 10px;
+}
+
+.item-features p {
+    color: var(--main-light-blue);
+}
+
+.item-price {
+    font-size: 2em;
+    background-color: var(--main-dark-blue);
+    margin: 10px 20px;
+    border-radius: 20px;
+}
+
+.item-price p {
+    color: var(--main-cream-color);
+}
+
+.item-features button {
+    width: 80%;
+    border-radius: 40px;
+    border: none;
+    background-color: var(--main-light-brown);
+}
+
+/* --- thanks page --- */
+
+.buy-thanks p {
+    color: var(--main-cream-color);
+    text-align: center;
+}
+.buy-thanks a{
+    text-decoration: none;
+    color: var(--main-cream-color);
+}
+
 @media (min-width: 768px) {
-    .portada{
+    .portada {
         background-image: url(./assets/pc-background-1024.jpg);
         background-position: center;
         height: 800px;
@@ -99,8 +209,8 @@ h1{
 }
 
 @media (min-width: 1024px) {
-    .nav-item a{
+    .nav-item a {
         margin-top: 23px;
     }
-    
+
 }
