--- a/style.css
+++ b/style.css
@@ -631,11 +631,11 @@ li p {
         height: 100px;
     }
     .icon img{
-        height: 90px;
-        width: 90px;
+        height: 80px;
+        width: 80px;
     }
     .icon h1{
-        font-size: 3em;
+        font-size: 2.7em;
     }
     .content-list {
         font-size: 1.5em;
@@ -667,8 +667,16 @@ li p {
     }
     .item-menu img{
         width: 75%;
+        max-height: 600px;
     }
     .item-features li{
         font-size: 1.5em;
+    }
+}
+
+@media (min-width: 2500px) {
+    .item-menu img{
+        max-height: 800px;
+        width: 50%;
     }
 }
